fix horizontal scrolling case for customScrollBar-container

--- a/packages/styles/_sass/pm-styles/_pm-custom-scrollbar.scss
+++ b/packages/styles/_sass/pm-styles/_pm-custom-scrollbar.scss
@@ -4,12 +4,13 @@ $scrollbar-thumb-color: #586065 !default;
 $scrollbar-thumb-height: 40px !default;
 
 .customScrollBar-container {
-  scrollbar-color: $scrollbar-thumb-color $black;
+  scrollbar-color: $scrollbar-thumb-color $scrollbar-color;
   scrollbar-width: thin;
 }
 
 .customScrollBar-container::-webkit-scrollbar {
   width: $scrollbar-width;
+  height: $scrollbar-width;
 }
 .customScrollBar-container::-webkit-scrollbar-button:start:decrement,
 .customScrollBar-container::-webkit-scrollbar-button:end:increment,
@@ -18,13 +19,19 @@ $scrollbar-thumb-height: 40px !default;
   display: none;
 }
 .customScrollBar-container::-webkit-scrollbar-track:vertical,
+.customScrollBar-container::-webkit-scrollbar-track:horizontal,
 .customScrollBar-container::-webkit-scrollbar-track-piece {
-  background-color: $black;
+  background-color: $scrollbar-color;
   border: 0;
   border-radius: #{$scrollbar-width/2};
 }
 ::-webkit-scrollbar-thumb:vertical {
   height: $scrollbar-thumb-height;
+  background-color: $scrollbar-thumb-color;
+  border-radius: #{$scrollbar-width/2};
+}
+::-webkit-scrollbar-thumb:horizontal {
+  height: $scrollbar-width/2;
   background-color: $scrollbar-thumb-color;
   border-radius: #{$scrollbar-width/2};
 }
